--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7"
   },
