--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.7",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
+    "marked": "^15.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
-    "tailwindcss": "^4.1.7"
+    "rehype-raw": "^7.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.1.7",
+    "vite-plugin-markdown": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
