--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.7",
+    "chart.js": "^4.4.9",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "marked": "^15.0.12",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
